Wed Jun  6 13:32:22 2001  Brian Gough  <bjg@network-theory.co.uk>

	* lmder.c covar.c lmiterate.c lmset.c: updated to use new QR
 	calling convention (now passes workspace)

Sat Apr 28 11:46:59 2001  Brian Gough  <bjg@network-theory.co.uk>

	* qrsolv.c (qrsolv): removed local declaration of j to avoid
 	shadowing global j

Mon Apr 23 13:40:04 2001  Brian Gough  <bjg@network-theory.co.uk>

	* qrsolv.c (qrsolv): made function static so it is not exported

Wed Apr 18 13:39:33 2001  Brian Gough  <bjg@network-theory.co.uk>

	* lmpar.c (compute_newton_direction): moved final rescaling inside
 	loop, as in the original lmpar.f

Thu Mar  8 15:29:32 2001  Brian Gough  <bjg@network-theory.co.uk>

	* lmpar.c (compute_newton_direction): corrected bug that produced
 	negative index

Sun Feb 18 16:39:46 2001  Brian Gough  <bjg@network-theory.co.uk>

	* fdfsolver.c (gsl_multifit_fdfsolver_alloc): changed so that the
 	solver _alloc function no longer calls _set, the user must do that
 	separately.

Fri Sep 29 19:19:24 2000  Brian Gough  <bjg@network-theory.co.uk>

	* Makefile.am multifit/demo.c: removed demo from Makefile since it
 	is was just a temporary test.
